--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1407,5 +1407,108 @@ stories:
   state: Michigan
   domain: http://www.thenewsherald.com/
   link: http://www.thenewsherald.com/news/true-meaning-of-christmas-dinner-serves-largest-crowd-ever-in/article_43f9bb58-2bf1-11ea-b5b6-271cb3dabe49.html
+images:
+- name: rain-princess-IMG_7319.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7319.jpg
+- name: oldhouse-oldhouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-propaganda-leaflets.jpg
+- name: old-granary-field-oldhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-granite.jpg
+- name: downtown-trucksilo-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-circuit.jpg
+- name: oldsmallboat-oldsmallboat-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-asteroids.jpg
+- name: fence-mexico-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-cinnamon-rolls.jpg
+- name: catacombs-catacombs-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-hot-spicy.jpg
+- name: downtheline-downtheline-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-nazi-poster.jpg
+- name: copper-circuit-city-building-trees-sky.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-building-trees-sky.jpg
+- name: lincoln-memorial-lincolnmemorial-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dark-rain.jpg
+- name: oldhouse-granaryfield-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dali-two.jpg
+- name: gears-4882162452-fa3126b38d-b-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-gred-mash.jpg
+- name: bluelake-neo-instinct-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-00-38-67.jpg
+- name: oldbarn-oldbarn-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-gred-mash.jpg
+- name: miamibeach-miamibeach-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-rainbow-festival.jpg
+- name: nazi-invasion-wild-gease-in-the-water.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-wild-gease-in-the-water.jpg
+- name: gypsy-wagon-gypsywagon-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-pablo-blue.jpg
+- name: server-cloud1-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-nazi-poster.jpg
+- name: downtown-street-view-leaflets-of-the-russian-revolution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-street-view-leaflets-of-the-russian-revolution.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-granite.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-granite.png
+- name: oldcabin-store-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-spagetti-accident.jpg
+- name: braceros-domingo-ulloa-border-fence-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-border-fence-down-the-line.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-far-away.jpg
+- name: nazi-invasion-downtown-light-posts.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-light-posts.jpg
+- name: aws-s3-stories-dark-clouds-la-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-dark-clouds-la-buildings.jpg
+- name: razorwire-DSC-0080-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-sunday.jpg
+- name: lincoln-memorial-lincolnmemorial-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-really-hot.jpg
+- name: san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+- name: carry-load-carryload-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sand-paper.jpg
+- name: la-muse-highway-granary-truck_36557728122_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-highway-granary-truck_36557728122_o.jpg
+- name: bf-skinner-statue-staring-down-to-right.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-staring-down-to-right.jpg
+- name: flower-barbed-wire-flower-barbed-wire-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-cinnamon-rolls.jpg
+- name: oldbarn-oldbarn-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-bright-sand.jpg
+- name: stories-castle-on-hill-edinburgh-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-on-hill-edinburgh-copper-circuit.JPG
+- name: christianity-christianity-under-construction-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-copper-circuit-2.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-sunday.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sunday.JPG
+- name: bf-skinner-path-in-woods-green-lush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-path-in-woods-green-lush.jpg
+- name: aws-s3-royalroads-royalroads-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still-1200.jpg
+- name: nazi-invasion-astoria-bridge-columbia.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-astoria-bridge-columbia.jpg
+- name: christianity-christianity-under-construction-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-free-woman.jpg
+- name: sand-hand-sand-hand-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-alberto-giacometti.jpg
+- name: rain-princess-IMG_6436.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6436.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-copper-circuit.JPG
+- name: rockingchair-rockingchair-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purp-paper.jpg
+- name: bordercrossing-bordercrossing-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-blue-circuit.jpg
+- name: berlinwall-DSC-0084-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-mucha-mult.jpg
+- name: old-gas-pumps-oldgaspumps-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-two.jpg
+- name: mosaic-face-mosaic-face-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-brush.jpg
+- name: oldhouse-oldhouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-brush.jpg
+- name: powerlines-power-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-hot-spicy.jpg
+- name: oldhotel-oldhotel-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-creativity.jpg
 ---
 Another Year, Another Birthday.&nbsp;California Fire Victims Face Deadline On Filing Claims.&nbsp;Turner Returns As Bowling Green Wins Nonconference Finale.&nbsp;Dashcam Captures Car Losing Control On Snowy Road.&nbsp;Classes In The Downriver Area.&nbsp;Area Students Place In Digital Photography Competition.&nbsp;Real Estate Investment Professionals Turn To Online Clubs.&nbsp;Warming Elders Tootsies At Meadowview.&nbsp;
